# cppmandel

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Core/: Defer.h  Memory.cpp  Memory.h  Queue.h  Slice.h  UniquePtr.h  Utils.h
Math/: Color.cpp  Color.h  Mat.cpp  Mat.h  Rect.h  Utils.h  Vec.h
OS/: AsyncQueue.h
